<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/containerPadding"
    >

    <LinearLayout
        android:id="@+id/linear_layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userName"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/userNameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:visibility="gone"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnChangeUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeUserText" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_songImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageButton
            android:id="@+id/songImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/songImageDescription"
            android:scaleType="fitCenter"
            android:src="@drawable/one_call_away"
            android:background="@android:color/transparent"
            android:foreground="?selectableItemBackground"/>

        <TextView
            android:id="@+id/songTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/songTitleText"
            android:textAlignment="center"
            android:textSize="@dimen/songTitleSize" />

        <TextView
            android:id="@+id/artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:text="@string/artistName"
            android:textSize="@dimen/artistNameSize"
            android:gravity="center"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/songNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_layout_controlBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/mediaControlTop">

        <ImageButton
            android:id="@+id/previousBtn"
            android:layout_width="0dp"
            android:layout_height="@dimen/mediaControlHeight"
            android:layout_weight="1"
            android:src="@drawable/ic_previous"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:foreground="?selectableItemBackground"
            android:contentDescription="@string/previousBtnDescr" />

        <ImageButton
            android:id="@+id/musicPlayBtn"
            android:layout_width="0dp"
            android:layout_height="@dimen/mediaControlHeight"
            android:layout_weight="1"
            android:src="@drawable/ic_play"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:foreground="?selectableItemBackground"
            android:contentDescription="@string/playBtnDescr" />

        <ImageButton
            android:id="@+id/nextBtn"
            android:layout_width="0dp"
            android:layout_height="@dimen/mediaControlHeight"
            android:layout_weight="1"
            android:src="@drawable/ic_next"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:foreground="?selectableItemBackground"
            android:contentDescription="@string/nextBtnDescr" />

    </LinearLayout>
</LinearLayout>